# mvc-3DViewer

./: README.md
src/: CMakeLists.txt  Makefile  documentation.md
src/Controller/: controller.cc  controller.h
src/Model/: myglwidget.cc  myglwidget.h  objparser.cc  objparser.h  settings.cc  settings.h  transformation.cc  transformation.h
src/Model/QtGifImage/gifimage/: qgifimage_p.h
src/Model/QtGifImage/giflib/: egif_lib.c
src/Tests/: objparser_test.cc  tests.cc
src/View/: main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
